// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devtool transforms correctly using "devtools-0" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtool: 'source-map'
}
"
`;

exports[`devtool transforms correctly using "devtools-1" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtools: 'eval',
    devtool: 'cheap-module-source-map'
}
"
`;

exports[`devtool transforms correctly using "devtools-2" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtools: {},
    devtool: myVariable
}
"
`;
